# django-drf-kmp-web

./: README.md
backend/: .env.example  pyproject.toml
backend/src/api/v1/: urls.py
backend/src/apps/notifications/: enums.py  registry.py  tasks.py
backend/src/apps/notifications/channels/: base.py  email.py  in_app.py  push.py  sms.py
backend/src/apps/notifications/commands/: dispatch_notification.py
backend/src/apps/notifications/providers/sms/: base.py  kavenegar.py
backend/src/apps/notifications/templates/: registery.py
backend/src/apps/users/: exceptions.py  models.py
backend/src/apps/users/api/: serializers.py  urls.py  views.py
backend/src/apps/users/commands/: register_user.py  request_registration_otp.py
backend/src/apps/users/migrations/: 0001_initial.py
backend/src/common/: exception_handlers.py  exceptions.py  models.py  pagination.py  responses.py
backend/src/common/cache/: keys.py  users.py
backend/src/config/: celery.py  urls.py
backend/src/config/settings/: base.py
