[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery==5.6.3",
    "django==5.2.15",
    "django-celery-beat==2.9.0",
    "django-environ==0.13.0",
    "djangorestframework==3.17.1",
    "redis==8.0.0",
]
